--- a/index.html
+++ b/index.html
@@ -1,11 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Exercise 3</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
+
 <body>
     <center>
         <h1>Daftar Planet</h1>
     </center>
+
+    <div class="card">
+        <div class="card-body">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th scope="col">No.</th>
+                        <th scope="col">Name</th>
+                        <th scope="col">Rotation Period</th>
+                        <th scope="col">Orbital Period</th>
+                        <th scope="col">Diameter</th>
+                        <th scope="col">Climate</th>
+                        <th scope="col">Gravity</th>
+                    </tr>
+                <tbody id="data">
+                </tbody>
+                </thead>
+
+            </table>
+
+        </div>
+
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
+    <script>
+        function getApi() {
+            fetch("https://swapi.co/api/planets/?format=json")
+                .then(resp => resp.json())
+                .then(commits => {
+                    toRender(commits.results)
+                })
+        };
+        function toRender(raw) {
+            var render = "";
+            raw.map(function (item, index) {
+                render += `<tr>
+                                <td> ${index + 1} </td>
+                <td> ${item.name} </td>
+                <td> ${item.rotation_period} </td>
+                <td> ${item.orbital_period} </td>
+                <td> ${item.diameter} </td>
+                <td> ${item.climate} </td>
+                <td> ${item.gravity} </td>
+                            </tr>`.trim()
+            })
+            document.getElementById("data").innerHTML = render
+        }
+        getApi()
+    </script>
 </body>
+
 </html>
